--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>E:\WorkSpace\com.instagram\testng.xml</span>
+                    <span>E:\WorkSpace\com.instagram\testng2.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -148,7 +148,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\WorkSpace\com.instagram\testng.xml</span>
+            <span class="header-content">E:\WorkSpace\com.instagram\testng2.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -201,16 +201,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'getCurrentURL')
 data.setCell(0, 2, 'com.basics.Facebook')
-data.setCell(0, 3, 156);
+data.setCell(0, 3, 112);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'getTitle')
 data.setCell(1, 2, 'com.basics.Facebook')
-data.setCell(1, 3, 70);
+data.setCell(1, 3, 42);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 226 ms</span>
+              <span class="suite-total-time">Total running time: 154 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -243,15 +243,15 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">getCurrentURL</span>
-                <span class="method-start">9648 ms</span>
+                <span class="method-start">9909 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getTitle</span>
-                <span class="method-start">9822 ms</span>
+                <span class="method-start">10037 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">9916 ms</span>
+                <span class="method-start">10087 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
